Add support to Sql DB and reading data from sqldb

--- a/TheBillboard/appsettings.json
+++ b/TheBillboard/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultDatabase": "Host=localhost;Database=postgres;Username=postgres;Password=postgres;Port=5432"
+    "DefaultDatabase": "Server=localhost;Database=DBTheBillboard;Trusted_Connection=True;",
+    "PostgreDatabase": "Host=localhost;Database=postgres;Username=postgres;Password=postgres;Port=5432"
   },
   "AllowedHosts": "*",
   "AppOptions": {
