--- a/TheBillboard/TheBillboard.csproj
+++ b/TheBillboard/TheBillboard.csproj
@@ -1,13 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
+      <None Remove="Writers\NewFile.txt" />
+    </ItemGroup>
+
+    <ItemGroup>
       <PackageReference Include="Npgsql" Version="7.0.0-preview.2" />
+      <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
     </ItemGroup>
 </Project>
