--- a/TheBillboard/TheBillboard.csproj
+++ b/TheBillboard/TheBillboard.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Dapper" Version="2.0.123" />
       <PackageReference Include="Npgsql" Version="7.0.0-preview.2" />
       <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
       <PackageReference Include="System.Linq.Async" Version="6.0.1" />
