--- a/TheBillboard/Dockerfile
+++ b/TheBillboard/Dockerfile
@@ -5,16 +5,16 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["TheBillboard/TheBillboard.csproj", "TheBillboard/"]
-RUN dotnet restore "TheBillboard/TheBillboard.csproj"
+COPY ["TheBillboard/TheBillboard.MVC.csproj", "TheBillboard/"]
+RUN dotnet restore "TheBillboard/TheBillboard.MVC.csproj"
 COPY . .
 WORKDIR "/src/TheBillboard"
-RUN dotnet build "TheBillboard.csproj" -c Release -o /app/build
+RUN dotnet build "TheBillboard.MVC.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "TheBillboard.csproj" -c Release -o /app/publish
+RUN dotnet publish "TheBillboard.MVC.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "TheBillboard.dll"]
+ENTRYPOINT ["dotnet", "TheBillboard.MVC.dll"]
