--- a/TheBillboard/appsettings.json
+++ b/TheBillboard/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultDatabase": "Server=localhost\\SQLEXPRESS;Database=Alice;Trusted_Connection=True"
+    "DefaultDatabase": "Server=localhost;Database=Alice;Trusted_Connection=True"
   },
   "AllowedHosts": "*",
   "AppOptions": {
