Add Message Delete, Author CRUD, Postam Collection without Test

--- a/TheBillboard.API/TheBillboard.API.csproj
+++ b/TheBillboard.API/TheBillboard.API.csproj
@@ -9,6 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Abstract\NewFile.txt" />
+    <None Remove="Domain\BaseObject" />
+    <None Remove="Domain\NewFile.txt" />
     <None Remove="Dtos\NewFile.txt" />
   </ItemGroup>
 
