Add EF FirstMigration and Ef Author

--- a/TheBillboard.API/appsettings.json
+++ b/TheBillboard.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultDatabase": "Server=localhost;Database=Alice;Trusted_Connection=True"
+    "DefaultDatabase": "Server=localhost;Database=TheBillboard;Trusted_Connection=True"
   },
   "AllowedHosts": "*"
 }
