--- a/TheBillboard.API/appsettings.json
+++ b/TheBillboard.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultDatabase": "Server=localhost\\SQLEXPRESS;Database=Alice;Trusted_Connection=True"
+    "DefaultDatabase": "Server=localhost\\SQLEXPRESS;Database=AliceEF;Trusted_Connection=True"
   },
   "AllowedHosts": "*"
 }
